# TTS-VisCoT

./: .gitignore  CLAUDE.md  README.md  WIP_REPORT.md  package-lock.json  poster.html  pyproject.toml  recipe.md  report.md  requirements.txt  run_deepeyes.md
.claude/: settings.local.json
.venv310/: pyvenv.cfg
.venv310/Scripts/: activate  activate.bat
configs/datasets/: treebench.yaml
configs/experiments/: baseline.yaml  comparison.yaml  tts.yaml
configs/models/: deepeyes_v2.yaml  grit.yaml  viscot.yaml
data/: treebench_paraphrased.jsonl
data/benchmark/: counting_100.jsonl  ocr_100.jsonl  vqa_100.jsonl
data/hard_bench/: counting_100.jsonl  ocr_100.jsonl  vqa_100.jsonl
data/treebench_samples/: metadata.jsonl
data/treebench_samples_2/: metadata.jsonl
experiments/: run_comparison.py  run_deepeyes_treebench.py  run_deepeyes_v2.py  run_entropy_pilot.py  run_model_benchmark.py  run_rerank.py  run_stochasticity_pilot.py  run_study_a_entropy.py  run_test_time_scaling.py  run_tts_eval.py  run_tts_hard.py  run_tts_hard_bench.py  run_tts_scale.py  run_tts_temperature.py  run_tts_treebench.py  run_viscot.py
poster/: export_pdf.js  index.html
reports/: experiment_01_viscot_comparison.md  token_level_feasibility.md  token_level_readme.md  treebench_tts_iteration_notes.md
results/: .gitkeep  treebench_paraphrase_template.jsonl
results/analysis/: candidate_correctness.json  scale_results.json
results/augmentation_ablation/: grit_flip_stats.json  qwen3b_flip_stats.json
results/calibration/: inference_cache.jsonl  selected_questions.jsonl
results/comparison/: ModelBenchmark.json  ModelBenchmark_judged.json
results/entropy_pilot/: entropy_deepeyes.jsonl  entropy_grit.jsonl  entropy_qwen.jsonl
results/study_a/: entropy_grit.jsonl  entropy_qwen3b.jsonl  entropy_results.jsonl  inference_cache.jsonl  summary.json
results/tts/: TTS.json  TTS_Hard.json  (+3 more)
scripts/: analyze_candidate_correctness.py  analyze_candidate_diversity.py  analyze_rerank.py  analyze_scale_results.py  augmentation_ablation.py  build_static_paraphrase_cache.py  export_treebench_questions.py  fig_augmentation_value.py  figures_poster.py  figures_scale.py  generate_report_figures.py  llm_judge_run2.py  plot_presentation.py  plot_results.py  plot_tts_hard_candidates.py  plot_tts_scaling.py  prepare_counting_data.py  prepare_hard_bench.py  replay_confidence_voting.py  run_ablations.sh  run_entropy_until_done.py  select_calibration_questions.py  setup_env.sh  smoke_deepeyes_treebench.py  visualize_run2.py  voting_strategies.py
src/: __init__.py  augment_image.py  augment_text.py  check_token_support.py  pipeline_tts.py  token_aggregation.py  utils_normalize.py  voting_tts.py
tests/: __init__.py  test_augmentation_ablation.py  test_data.py  test_eval.py  test_models.py  test_run_comparison.py  test_run_deepeyes_treebench.py  test_run_tts_eval.py  test_stochasticity.py  test_token_aggregation.py  test_token_trace.py  test_treebench_export.py  test_tts_eval.py  test_tts_pipeline.py  test_tts_trace_metrics.py  test_tts_vote_analysis.py  test_voting.py  test_voting_replay.py  test_voting_strategies.py
(+71 files in other folders)
